objects/SlickSidebar__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Accordion_Arrow_Colour__c</fullName>
        <defaultValue>&quot;#009DDC&quot;</defaultValue>
        <inlineHelpText>HEX colour code for the accordion arrows</inlineHelpText>
        <label>Accordion Arrow Colour</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Hover_Colour__c</fullName>
        <defaultValue>&quot;#E0F0FF&quot;</defaultValue>
        <inlineHelpText>HEX colour for mouse hover</inlineHelpText>
        <label>Row Hover Colour</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Activity_History__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Activity History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Customer_Summary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Customer Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Generic_Related_List_1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Generic Related List 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Generic_Related_List_2__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Generic Related List 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Nearby_Locations__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Nearby Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Related_Cases__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Related Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Related_Opportunities__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Related Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <label>SlickSidebar Configuration</label>
</CustomObject>